# pcode-generator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.work  go.work.sum
ghidra-decompiler/: build.rs
ghidra-decompiler/src/: lib.rs  wrapper.cc  wrapper.hh
scripts/adapt-mem-vdso/: adapt.py  modified_file.txt
scripts/callother_count/: Cargo.toml
scripts/common_operations/: Cargo.toml  output_common.txt
scripts/elf-vs-ghidra-functions/: Cargo.toml  additiongo-taskset1.xml  low_pcode_generator.txt
scripts/get-all-callother/: Cargo.toml  output.txt
scripts/ghidra-python_find-useless-data/: extract_instructions.py  find_data_segments.py
src/: analyze_binary.py  high_pcode_generator.txt  lib.rs  low_pcode_generator.rs  main.rs  pcode_generator.rs
tests/addition/: addition.c
tests/addition-ptrdere-libc/: addition-ptrdere-libc  addition-ptrdere-libc.c
tests/addition-ptrderef/: addition-ptrderef  addition-ptrderef.c
tests/additiongo/: additiongo  go.mod  monitor_pc.py
tests/additiongo-1thread/: additiongo-1thread  additiongo-1thread_functions.txt  go.mod  main.go
tests/additiongo-noruntime/: additiongo-noruntime  go.mod
tests/additiongo-ptrderef/: additiongo-ptrderef  go.mod  main.go
tests/additiongo-taskset1/: additiongo-taskset1  additiongo-taskset1_functions.txt  go.mod
tests/additiongo-tinygo/: additiongo-tinygo  go.mod  main.go
tests/additiongo-tinygo_ptr-deref/: additiongo-tinygo_ptr-deref  go.mod  main.go  symbols.txt
tests/assert/: go.mod  main.go
tests/broken-calculator/: go.mod  (+3 more)
tests/broken-calculator-bis-fuzzing/: go.mod
(+188 files in other folders)
