[package]
name = "pcode_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
icicle-vm = { path = "icicle-emu/icicle-vm" }
pcode = { path = "icicle-emu/sleigh/pcode" }
ghidra-decompiler = { path = "ghidra-decompiler" }
goblin = "0.8.0"
object = "0.34.0"
gimli = "0.28.1"
memmap = "0.7.0"
log = "0.4.22"
env_logger = "0.11.5"
capstone = "0.12.0"

[workspace]
members = ["ghidra-decompiler", "scripts/callother_count", "scripts/common_operations", "scripts/elf-vs-ghidra-functions", "scripts/get-all-callother"]
